# ti83-solana-hardware-wallet

./: .gitignore  AGENTS.md  CMakeLists.txt  Makefile  TI_TILibs_Cheatsheet.md  calc_session.c  calc_session.h  calc_string_store.c  calc_string_store.h  examples.c  main.c  readme.md  wallet_crypto.c  wallet_crypto.h
keypair/: add_scalar.c  ed25519.h  keypair.c  sign.c
solana/: solana_client.c  solana_client.h  solana_encoding.c  solana_encoding.h
tilibs/: CMakeLists.txt  CMakePresets.json  vcpkg.json
tilibs/libticables/trunk/: CMakeLists.txt
tilibs/libticables/trunk/src/win32/: dha.h
tilibs/libticables/trunk/tests/: CMakeLists.txt
tilibs/libticalcs/trunk/: CMakeLists.txt
tilibs/libticalcs/trunk/src/: calc_84p.cc
tilibs/libticalcs/trunk/src/romdump_8x/: ti83pdefs.inc
tilibs/libticalcs/trunk/tests/: CMakeLists.txt  test_ticalcs_2.cc
tilibs/libticonv/trunk/: CMakeLists.txt
tilibs/libticonv/trunk/tests/: CMakeLists.txt
tilibs/libtifiles/trunk/: CMakeLists.txt
tilibs/libtifiles/trunk/tests/: CMakeLists.txt
ui/: Cargo.toml
ui/cwallet-sys/: Cargo.toml  build.rs  wrapper.h
ui/cwallet-sys/src/: lib.rs
ui/cwallet-ui/: Cargo.toml  Dioxus.toml
ui/cwallet-ui/assets/: style.css
ui/cwallet-ui/src/: ffi.rs  main.rs  state.rs  transaction.rs
ui/cwallet-ui/src/components/: airdrop.rs  balance.rs  connection_status.rs  create_keypair.rs  layout.rs  load_keypair.rs  mod.rs  send_sol.rs
