[package]
name = "cwallet-ui"
version = "0.1.0"
edition = "2021"

[dependencies]
cwallet-sys = { path = "../cwallet-sys" }
dioxus = { version = "0.6", features = ["desktop", "router"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
